--- a/style.css
+++ b/style.css
@@ -10,18 +10,22 @@ body {
 nav {
     position: sticky;
     display: flex;
-    justify-content: flex-end;
-    gap: 2em;
     padding: 1em;
     top: 0;
     background-color: #121212;
 }
 
-nav > img {
-    max-height: 30px;
+.nav-links {
+    gap: 2em;
+    justify-content: flex-end;
 }
 
-nav > a {
+.logo {
+    max-height: 60px;
+    justify-content: flex-start;
+}
+
+.nav-links > a {
     border-bottom: 1px solid #FDFDEF;
     padding-bottom: 3px;
 }
