--- a/style.css
+++ b/style.css
@@ -10,19 +10,26 @@ body {
 nav {
     position: sticky;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-height: 2em;
     padding: 1em;
     top: 0;
     background-color: #121212;
 }
 
 .nav-links {
+    display: flex;
     gap: 2em;
     justify-content: flex-end;
 }
 
 .logo {
-    max-height: 60px;
     justify-content: flex-start;
+}
+
+#avatar {
+    height: 60px;
 }
 
 .nav-links > a {
