--- a/style.css
+++ b/style.css
@@ -28,9 +28,14 @@ nav {
     justify-content: flex-start;
 }
 
-#avatar {
-    height: 60px;
+.logo img {
+    height: 40px;
 }
+
+.logo img:hover {
+    transform: scaleY(-1);
+}
+
 
 .nav-links > a {
     border-bottom: 1px solid #FDFDEF;
@@ -85,6 +90,7 @@ img {
     border: none;
     max-width: 100%;
     margin: 2em 0em 2em 0em;
+    height: auto;
 }
 
 blockquote {
