--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ a:hover {
            /*ffd166 06d6a0 118ab2 */
 
     background-color: #FFD166;
-    background-image: linear-gradient(45deg, #D62828, #F77F00);
+    background-image: linear-gradient(45deg, #E63838, #F77F00);
     background-size: 100%;
     background-clip: text;
     text-fill-color: transparent;
